Chore[WIP]: The chat function is initially completed

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -21,6 +21,7 @@ dependencies:
   flutter_localizations:
     sdk: flutter
   shared_preferences: ^2.5.3
+  taudio: ^10.3.0
 
 dev_dependencies:
   flutter_test:
