--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -22,6 +22,7 @@ dependencies:
     sdk: flutter
   shared_preferences: ^2.5.3
   taudio: ^10.3.0
+  sqflite: ^2.4.2
 
 dev_dependencies:
   flutter_test:
