--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -24,6 +24,7 @@ dependencies:
   taudio: ^10.3.0
   sqflite: ^2.4.2
   pull_to_refresh_flutter3: ^2.0.2
+  mesh_gradient: ^1.3.8
 
 dev_dependencies:
   flutter_test:
