--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -25,6 +25,8 @@ dependencies:
   sqflite: ^2.4.2
   pull_to_refresh_flutter3: ^2.0.2
   mesh_gradient: ^1.3.8
+  dio: ^5.8.0+1
+  url_launcher: ^6.3.1
 
 dev_dependencies:
   flutter_test:
